# langchain_ice_breaker

./: Pipfile  README.md  ice_breaker.py  pyproject.toml
icebreaker/: app.py  main.py  output_parsers.py
icebreaker/agents/: linkedin_lookup_agent.py
icebreaker/scraping/: linkedin.py
icebreaker/static/css/: style.css
icebreaker/templates/: index.html
icebreaker/tools/: tools.py
scripts/: fetch_linkedin.py
