[tool.poetry]
name = "icebreaker"
version = "0.1.0"
description = ""
authors = ["Timo van Niedek <timovanniedek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1"
langchain-openai = "^0.1.7"
langchainhub = "^0.1.15"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
